# geneva-software-reliability-lab

./: .gitignore  AUTHOR.md  Makefile  README.md  package.json  pyproject.toml  run_course.sh  validate_repo.sh
.github/workflows/: ci.yml
cheatsheets/: bash_debugging.md  git_failure_recovery.md  linux_observability.md  python_debugging.md  rca_template.md
data_science/: README.md
devops/: README.md
docs/: CORE_CONCEPTS.md  CV_READY_SUMMARY.md  LESSON_EXECUTION_COMPANION.md  LESSON_RESEARCH_ANALYSIS_COMPANION.md  OFFLINE_INDEX.md  PORTFOLIO_SKILL_MAPPING.md  PROJECT_MANUAL.md  README.md  REPOSITORY_STATUS_REPORT.md
incidents/: simulated_prod_outage.md
labs/lab1_runtime_crash/: README.md  ticket.md
labs/lab1_runtime_crash/app/: crashy_service.py
labs/lab1_runtime_crash/tests/: test_runtime_crash.py
labs/lab2_memory_leak/: README.md  ticket.md
labs/lab3_race_condition/: README.md  ticket.md
labs/lab4_api_failure/: README.md  ticket.md
labs/lab5_ci_pipeline_break/: README.md  ticket.md
labs/lab6_container_crashloop/: Dockerfile  README.md  ticket.md
soc/: README.md
src/broken_node_api/: server.js  test_server_contract.js
src/broken_python_service/: service.py
src/faulty_threading_app/: deadlock_demo.py  race_demo.py
sysadmin/: README.md
tests/failing_tests/: __init__.py  test_api_failure.py  test_ci_pipeline_break.py  test_container_crashloop.py  test_memory_leak.py  test_race_condition.py  test_runtime_crash.py
theory/: concurrency_primer.md  debugging_methodology.md  failure_taxonomy.md  memory_leaks_explained.md
(+10 files in other folders)
